<resources>
    <string name="app_name">FinalProj</string>
    <string name="user_login">User Login</string>
    <string name="Login">Login</string>
    <string name="Header">Welcome to the Tavern adventurer. We need ID for your entrance!</string>
    <string name="RegisterText">Just need some information before you join the Tavern</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Title">Future App Name</string>
    <string name="Create_Character">Create New Character</string>
    <string name="View_Characters">View Characters</string>
    <string name="Review_Rules">Review Rules</string>
    <string name="Password_Confirm">Confirm Password</string>
    <string name="Passwor">Confirm Password</string>
    <string name="ForgotPassword"><u>Forgot Password?</u></string>
    <string name="ForgottenPasswordTxt">Please enter your email and well send you a password reset link</string>
    <string name="Send">Send</string>
    <string name="Cancel">Cancel</string>
    <string name="TheTavern">The Tavern</string>
    <string name="NewCharacter">New Character</string>
    <string name="NewCharacterAbridged">New Character Abridged</string>
    <string name="Rules">Rules</string>
    <string name="ViewCharacter">View Characters</string>
    <string name="acolyte"><b>Acolyte -</b> You are an adventurer who was in a religious service, you wanted to expand your beliefs so you prepare to set out on your journey.</string>
    <string name="criminal_spy"><b>Criminal -</b> Crime after crime you have committed, you finally decide
you want to venture out and do more.</string>
    <string name="folk_hero"><b>Folk -</b> You have been seen as a prodigy or a hero in your town or village and
have decided to go out on an adventure.</string>
    <string name="noble"><b>Noble -</b> Your family came from a very high place and as a noble you will not
let the other adventurers of lower born best you.</string>
    <string name="sage"><b>Sage -</b> Where magic exists is where adventure awaits. You wander in search
for a higher magic to perfect your arts.</string>
    <string name="soldier"><b>Soldier -</b> Once on the battlefield with combat experience. Their strength and experience is
an asset to any adventure.</string>
    <string-array name="RaceArray">
        <item>All</item>
        <item>Human</item>
        <item>Elf</item>
        <item>Dwarf</item>
        <item>Gnome</item>
        <item>Tiefling</item>
        <item>DragonBorne</item>

    </string-array>

    <string-array name="BackgroundArray">
        <item>All</item>
        <item>Acolyte</item>
        <item>Criminal</item>
        <item>Folk</item>
        <item>Noble</item>
        <item>Sage</item>
        <item>Soldier</item>

    </string-array>

    <string-array name="ClassArray">
        <item>All</item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rouge</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>

    </string-array>
</resources>