<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgBannerReg"
        android:layout_width="343dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/Email"
        android:ems="10"
        android:hint="@string/Email"
        android:textColorHint="#000000"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgScroll" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/Password"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/Password_Confirm"
        android:ems="10"
        android:hint="@string/Password_Confirm"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />

    <Button
        android:id="@+id/btnRegisterComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="Move_Login"
        android:text="@string/Register"
        app:backgroundTint="#C7A575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm" />

    <ImageView
        android:id="@+id/imgScroll"
        android:layout_width="213dp"
        android:layout_height="107dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBannerReg"
        app:srcCompat="@drawable/penandscroll" />

    <ImageView
        android:id="@+id/imgRegGirl"
        android:layout_width="123dp"
        android:layout_height="192dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterComplete"
        app:srcCompat="@drawable/reggirl" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="128dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/RegisterText"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgRegGirl"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterComplete" />

</androidx.constraintlayout.widget.ConstraintLayout>